k3s/scanservjs/scanservjs.yml
apiVersion: v1
kind: Namespace
metadata:
  name: scanservjs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanservjs
  namespace: scanservjs
  labels:
    app: scanservjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scanservjs
  template:
    metadata:
      labels:
        app: scanservjs
    spec:
      containers:
        - name: scanservjs
          image: sbs20/scanservjs:latest
          ports:
            - containerPort: 8080
