k3s/scanservjs/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: scanservjs-lb
  namespace: scanservjs
spec:
  selector:
    app: scanservjs
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 192.168.1.210
---
kind: Service
apiVersion: v1
metadata:
  name: scanservjs-int-service
  namespace: scanservjs
spec:
  type: ClusterIP
  selector:
    app: scanservjs
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
