k3s/scanservjs/ingress-traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scanserv-ing-traefik
  namespace: scanservjs
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "scan.bird.nest"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scanservjs-int-service
            port:
              number: 3001
